feat: swagger, jwt in contact delete & update
